--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
 		"ejs": "~2.5.7",
 		"express": "~4.16.0",
 		"http-errors": "~1.6.2",
-		"morgan": "~1.9.0"
+		"morgan": "~1.9.0",
+		"multer": "^1.4.1"
 	},
 	"devDependencies": {
 		"eslint": "^5.8.0"
