--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
 		"css-loader": "^1.0.1",
 		"eslint": "^5.8.0",
 		"html-webpack-plugin": "^3.2.0",
+		"mini-css-extract-plugin": "^0.4.4",
 		"node-sass": "^4.10.0",
 		"sass-loader": "^7.1.0",
 		"style-loader": "^0.23.1",
