--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
 		"ejs": "~2.5.7",
 		"express": "~4.16.0",
 		"http-errors": "~1.6.2",
+		"jquery": "^3.3.1",
 		"morgan": "~1.9.0",
 		"multer": "^1.4.1"
 	},
