--- a/package.json
+++ b/package.json
@@ -21,12 +21,12 @@
 		"css-loader": "^1.0.1",
 		"eslint": "^5.8.0",
 		"html-webpack-plugin": "^3.2.0",
-		"mini-css-extract-plugin": "^0.4.4",
 		"node-sass": "^4.10.0",
 		"sass-loader": "^7.1.0",
 		"style-loader": "^0.23.1",
 		"webpack": "^4.25.1",
 		"webpack-dev-middleware": "^3.4.0",
-		"webpack-livereload-plugin": "^2.1.1"
+		"webpack-livereload-plugin": "^2.1.1",
+		"mini-css-extract-plugin": "^0.4.4"
 	}
 }
